syntax = "proto3";

package com.road.yishi.proto.pet;

message PetDetailMsgList {
  repeated int32 petList = 1;
}
